--- a/GrashaSkardu/appsettings.json
+++ b/GrashaSkardu/appsettings.json
@@ -1,10 +1,16 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
-  "AllowedHosts": "*"
-}
+  "ConnectionStrings": {
+    "SeverName": "your Server Instance; your Db Name; Integrated_Security:True"
+    "Logging": {
+      "LogLevel": {
+        "Default": "Information",
+        "Microsoft": "Warning",
+        "Microsoft.Hosting.Lifetime": "Information"
+      }
+    },
+    "AllowedHosts": "*"
+
+
+
+  }
+
